--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 title: Yelshat Duskaliyev
-description: Just some information about me
+description: \“Evolution forged the entirety of sentient life on this planet using only one tool… The mistake.\” \- Dr. Robert Ford, Westworld, Westworld Season 1: The Original 
 show_downloads: false
-google_analytics:
 theme: jekyll-theme-minimal
