--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Yelshat Duskaliyev
-description: "\“Evolution forged the entirety of sentient life on this planet using only one tool… The mistake.\” - Dr. Robert Ford, Westworld, Westworld Season 1: The Original "
+description: "“Evolution forged the entirety of sentient life on this planet using only one tool… The mistake.” - Dr. Robert Ford, Westworld, Season 1"
 show_downloads: false
 theme: jekyll-theme-minimal
