changed email to yduskaliev@semior.dev

--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ params:
   footer: |
     I'm a software, mobile, and web-developer and just a good man :)<br>
     Now I study at <a href="https://university.innopolis.ru">Innopolis University</a> for Bachelor's degree of Computer Science
-  mail: ura2178@gmail.com
+  mail: yduskaliyev@semior.dev
 
 menu:
   main:
