updated cv and footer

--- a/config.yaml
+++ b/config.yaml
@@ -6,8 +6,8 @@ params:
   description: |
     "Evolution forged the entirety of sentient life on this planet using only one tool… The mistake.” - Dr. Robert Ford, Westworld, Season 1
   footer: |
-    I'm a software, mobile, and web-developer and just a good man :)<br>
-    Now I study at <a href="https://university.innopolis.ru">Innopolis University</a> for Bachelor's degree of Computer Science
+    I am a backend engineer, who loves to write in Go, owner of a tiny homelab 
+    and trying to be a good person and reach some new knowledge every day.
   mail: yduskaliyev@semior.dev
 
 menu:
